logs/truffle.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/Whoosh-2.7.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/truffle'...
Compiling './lib/python3.5/site-packages/truffle/app.py'...
***   File "./lib/python3.5/site-packages/truffle/app.py", line 33
    print file_index
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/truffle/filetools.py'...
***   File "./lib/python3.5/site-packages/truffle/filetools.py", line 105
    print node_name
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/truffle/frontend'...
Listing './lib/python3.5/site-packages/truffle/frontend/static'...
Listing './lib/python3.5/site-packages/truffle/frontend/static/css'...
Listing './lib/python3.5/site-packages/truffle/frontend/static/js'...
Listing './lib/python3.5/site-packages/truffle/frontend/static/js/lib'...
Listing './lib/python3.5/site-packages/truffle/frontend/templates'...
Listing './lib/python3.5/site-packages/truffle/indexdir'...
Listing './lib/python3.5/site-packages/truffle/parsers'...
Compiling './lib/python3.5/site-packages/truffle/parsers/pyparser.py'...
***   File "./lib/python3.5/site-packages/truffle/parsers/pyparser.py", line 19
    print 'File %s has invalid syntax, cannot be indexed' % self.fname
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/truffle-0.1.dev0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/whoosh'...
Listing './lib/python3.5/site-packages/whoosh/analysis'...
Listing './lib/python3.5/site-packages/whoosh/automata'...
Listing './lib/python3.5/site-packages/whoosh/codec'...
Listing './lib/python3.5/site-packages/whoosh/filedb'...
Listing './lib/python3.5/site-packages/whoosh/lang'...
Listing './lib/python3.5/site-packages/whoosh/lang/snowball'...
Listing './lib/python3.5/site-packages/whoosh/matching'...
Listing './lib/python3.5/site-packages/whoosh/qparser'...
Listing './lib/python3.5/site-packages/whoosh/query'...
Listing './lib/python3.5/site-packages/whoosh/support'...
Listing './lib/python3.5/site-packages/whoosh/util'...
Listing './share'...
Listing './share/python-wheels'...
